MyProject/force-app/main/default/objects/Bank_Customer__c/Bank_Customer__c.object-meta.xml
<CustomObject>
    <label>Bank Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>