MyProject/force-app/main/default/objects/Bank_Customer__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>