MyProject/force-app/main/default/objects/Bank_Customer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>12</length>
    <type>Text</type>
</CustomField>