MyProject/force-app/main/default/objects/Bank_Customer__c/fields/Mobile_no__c.field-meta.xml
<CustomField>
    <fullName>Mobile_no__c</fullName>
    <label>Mobile no.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>