MyProject/force-app/main/default/objects/Bank_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Address__c</columns>
    <columns>Branch__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Email_id__c</columns>
    <columns>Mobile_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>